elFinder: fix for file names overlapping
Fix for long file names overlapping buttons in preview window header

--- a/include/css/admin_finder.scss
+++ b/include/css/admin_finder.scss
@@ -72,3 +72,15 @@ body,
 		width: auto;
 	}
 }
+
+/**
+ * fix for long file names overlapping buttons in preview window header
+ */
+.elfinder-quicklook-title {
+	max-width: 100%;
+	text-overflow: ellipsis;
+}
+
+.elfinder-quicklook-titlebar {
+	padding: 0 40px;
+}
